# symlink-app-wip

./: .env  Cargo.toml  LICENSE  README.md
src/: fs_util.rs  lib.rs  linker.rs  main.rs  package_installer.rs
src/installer/: config_linker.rs  error.rs  exec.rs  filters.rs  fs_util.rs  mod.rs  option.rs  package_installer.rs  types.rs
src/lib/: error.rs  exec.rs  filters.rs  mod.rs  option.rs  types.rs
src/lib/filesystem/: mod.rs
src/lib/subcommand/: config.rs  link.rs  list.rs  mod.rs  version.rs
src/lib/term/: info.rs  mod.rs
