[package]
name = "yamlinker"
version = "0.2.0"
authors = ["Jesse Malinosky <jesse@malinoskj2.dev>"]
edition = "2018"
description = "make sym links and deploy files via yaml"

[lib]
name="lib_dot_installer"
path = "src/installer/mod.rs"

[[bin]]
name = "dot_installer"
path = "src/main.rs"

[dependencies]

structopt = "0.2"
walkdir = "2"

serde = "1.0.89"
serde_derive = "1.0.89"
serde_yaml = "0.8.8"

symlink = "0.1.0"
shellexpand = "1.0.0"
derive_builder = "0.7.1"

failure = "0.1.5"
failure_derive = "0.1.5"

